build: upgrade versions
- gradle 8.6
- kotlin jvm plugin 1.9.22
- kotlin spring plugin 1.9.22